added shop page

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <body> 
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">kimkim</a>
+        <a href="#" class="brand-logo center black-text">kimkim.</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="sass.html">home.</a></li>
-          <li><a href="badges.html">shop.</a></li>
-          <li><a href="collapsible.html">about.</a></li>
+          <li><a href="index.html" class="black-text">home.</a></li>
+          <li><a href="shop.html" class="black-text">shop.</a></li>
+          <li><a href="collapsible.html" class="black-text">about.</a></li>
         </ul>
       </div>
     </nav>
@@ -39,14 +39,13 @@
     <section class='container'>
         <div class="secondary-header grid">
             <div class="left-header">
-                <h2 class="lg-font">Lorem, ipsum dolor.</h2>
-                <p class="md-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, adipisci? <br><br><br><br><br><br><br></p>
+                <h2 class="lg-font">Hey, I'm Kim.</h2>
+                <p class="md-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, adipisci?</p>
             </div>
             <div class="right-header">
                 <img src="/img/Struct Demo.png" alt="">
             </div>
         </div>
-
     </section>
      
 
