grid ideas on shop page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="secondary-header grid">
             <div class="left-header">
                 <h2 class="lg-font">Hey, I'm Kim.</h2>
-                <p class="md-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, adipisci?</p>
+                <p class="md-font">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dignissimos eos mollitia nesciunt perspiciatis natus? Iure voluptatem eaque blanditiis atque sint ipsum similique molestias, commodi nostrum ducimus recusandae officia doloribus.</p>
             </div>
             <div class="right-header">
                 <img src="/img/Struct Demo.png" alt="">
