--- a/shop.html
+++ b/shop.html
@@ -94,7 +94,7 @@
 
                 <div class="card card-four">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/art/images-7.jpg">
+                      <img class="activator" src="img/art/images-8.jpg">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">ceramic four.<i class="material-icons right">more_vert</i></span>
@@ -111,7 +111,7 @@
 
                 <div class="card card-five">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/art/images-7.jpg">
+                      <img class="activator" src="img/art/images-5.jpg">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">ceramic five.<i class="material-icons right">more_vert</i></span>
@@ -123,6 +123,23 @@
                     </div>
                   </div>
               </div>
+              <div class="col s4">
+                <!-- card six -->
+
+              <div class="card card-six">
+                  <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="img/art/images-4.jpg">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">ceramic five.<i class="material-icons right">more_vert</i></span>
+                    <p>$45</p>
+                  </div>
+                  <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                  </div>
+                </div>
+            </div>
           </div>
       </div>
     
