update sale cards with real photos

--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
 
                 <div class="card card-one">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/art/images-1.jpg">
+                      <img class="activator" src="img/forZane/Bowl_Andrew (1).jpg">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">ceramic one.<i class="material-icons right">more_vert</i></span>
@@ -60,7 +60,7 @@
 
                 <div class="card card-two">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/art/images-3.jpg">
+                      <img class="activator" src="img/forZane/Bowl_JJ.jpg">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">ceramic two.<i class="material-icons right">more_vert</i></span>
@@ -77,7 +77,7 @@
 
                 <div class="card card-three">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/art/images-7.jpg">
+                      <img class="activator" src="img/forZane/Bowl_Milo.jpg">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">ceramic three.<i class="material-icons right">more_vert</i></span>
@@ -88,57 +88,29 @@
                       <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                   </div>
-              </div>
-              <div class="col s4">
-                  <!-- card four -->
-
-                <div class="card card-four">
-                    <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/art/images-8.jpg">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">ceramic four.<i class="material-icons right">more_vert</i></span>
-                      <p>$75</p>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                  </div>
-              </div>
-              <div class="col s4">
-                  <!-- card five -->
-
-                <div class="card card-five">
-                    <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/art/images-5.jpg">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">ceramic five.<i class="material-icons right">more_vert</i></span>
-                      <p>$45</p>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                  </div>
-              </div>
-              <div class="col s4">
-                <!-- card six -->
-
-              <div class="card card-six">
-                  <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="img/art/images-4.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">ceramic five.<i class="material-icons right">more_vert</i></span>
-                    <p>$45</p>
-                  </div>
-                  <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                  </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col s4">
+                    <!-- card four -->
+  
+                  <div class="card card-three">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="img/forZane/Vase.jpg">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">ceramic three.<i class="material-icons right">more_vert</i></span>
+                        <p>$100</p>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+          </div>
+
             </div>
           </div>
       </div>
