--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
     <body> 
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper deep-orange lighten-3">
         <a href="#" class="brand-logo center black-text">kimkim.</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a href="index.html" class="black-text">home.</a></li>
