changed landing page icon. added rows to shop

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="md-font">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dignissimos eos mollitia nesciunt perspiciatis natus? Iure voluptatem eaque blanditiis atque sint ipsum similique molestias, commodi nostrum ducimus recusandae officia doloribus.</p>
             </div>
             <div class="right-header">
-                <img src="/img/Struct Demo.png" alt="">
+                <img src="img/08 copy.png" alt="">
             </div>
         </div>
     </section>
