--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
     </head>
     <body> 
      <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper deep-orange lighten-3">
         <a href="#" class="brand-logo center black-text">kimkim.</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a href="index.html" class="black-text">home.</a></li>
@@ -37,10 +37,10 @@
 
      <!-- main shop grid -->
       <div class="container">
+        <!-- row one -->
           <div class="row">
+            <!-- card one -->
               <div class="col s4">
-                  <!-- card one -->
-
                 <div class="card card-one">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/forZane/Bowl_Andrew (1).jpg">
@@ -55,9 +55,8 @@
                     </div>
                   </div>
               </div>
+              <!-- card two -->
               <div class="col s4">
-                  <!-- card two -->
-
                 <div class="card card-two">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/forZane/Bowl_JJ.jpg">
@@ -72,9 +71,8 @@
                     </div>
                   </div>
               </div>
+              <!-- card three -->
               <div class="col s4">
-                  <!-- card three -->
-
                 <div class="card card-three">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/forZane/Bowl_Milo.jpg">
@@ -90,27 +88,61 @@
                   </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col s4">
-                    <!-- card four -->
-  
-                  <div class="card card-three">
-                      <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="img/forZane/Vase.jpg">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">ceramic three.<i class="material-icons right">more_vert</i></span>
-                        <p>$100</p>
-                      </div>
-                      <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                      </div>
+            </div>
+          </div>
+      </div>
+      <div class="container">
+        <!-- row two -->
+          <div class="row">
+            <!-- card four -->
+              <div class="col s4">
+                <div class="card card-one">
+                    <div class="card-image waves-effect waves-block waves-light">
+                      <img class="activator" src="img/forZane/Juicer_Maria (1).jpg">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title activator grey-text text-darken-4">ceramic one.<i class="material-icons right">more_vert</i></span>
+                      <p>$50</p>
+                    </div>
+                    <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                   </div>
               </div>
-          </div>
-
+              <div class="col s4">
+                <!-- card five -->
+                <div class="card card-two">
+                    <div class="card-image waves-effect waves-block waves-light">
+                      <img class="activator" src="img/forZane/Juicer_David (1).jpg">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title activator grey-text text-darken-4">ceramic two.<i class="material-icons right">more_vert</i></span>
+                      <p>$500</p>
+                    </div>
+                    <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                  </div>
+              </div>
+              <!-- card six -->
+              <div class="col s4">
+                <div class="card card-three">
+                    <div class="card-image waves-effect waves-block waves-light">
+                      <img class="activator" src="img/forZane/Juicer1-2.jpg">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title activator grey-text text-darken-4">ceramic three.<i class="material-icons right">more_vert</i></span>
+                      <p>$100</p>
+                    </div>
+                    <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
             </div>
           </div>
       </div>
