homepage edit and trying new shop layouts

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     </head>
     <body> 
     <nav>
-      <div class="nav-wrapper deep-orange lighten-3">
-        <a href="#" class="brand-logo center black-text">kimkim.</a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="index.html" class="black-text">home.</a></li>
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo center black-text">kimkim.</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="shop.html" class="black-text">shop.</a></li>
           <li><a href="collapsible.html" class="black-text">about.</a></li>
         </ul>
@@ -40,10 +39,10 @@
         <div class="secondary-header grid">
             <div class="left-header">
                 <h2 class="lg-font">Hey, I'm Kim.</h2>
-                <p class="md-font">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dignissimos eos mollitia nesciunt perspiciatis natus? Iure voluptatem eaque blanditiis atque sint ipsum similique molestias, commodi nostrum ducimus recusandae officia doloribus.</p>
+                <h6 class="text-center md-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias est laudantium officia quas ullam minima. Quos tempora, aliquid perferendis quisquam illum sequi numquam vitae, quam debitis itaque laudantium error iure?</h6>
             </div>
             <div class="right-header">
-                <img src="img/08 copy.png" alt="">
+                <img src="img/02 copy.png" alt="">
             </div>
         </div>
     </section>
