--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   
 
       <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="javascript/script.js"></script>
       <script type="text/javascript" src="/javascript/materialize.min.js"></script>
     </body>
   </html>
