--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
     <body> 
      <nav>
       <div class="nav-wrapper">
-        <a href="./index.html" class="brand-logo center black-text">kimkim.</a>
+        <a href="/index.html" class="brand-logo center black-text">kimkim.</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="shop.html" class="black-text">shop.</a></li>
           <li><a href="collapsible.html" class="black-text">about.</a></li>
@@ -39,23 +39,24 @@
 
       <!-- row one -->
       <div class="row">
-        <div class="col s4">
+        <!-- card one -->
+        <a href="/product pages/andrew_bowl.html"><div class="col s4">
           <div class="card">
             <div class="card-image">
               <img src="img/forZane/Bowl_Andrew1.jpg" data-hover="img/forZane/Bowl_Andrew2.jpg" data-unhover="img/forZane/Bowl_Andrew1.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
             </div>
             <div class="card-content">
-              <h4 class="md-font">ceramic one.</h4>
+              <h4 class="md-font">bowl one.</h4>
               <p class="md-font">$50.</p>
             </div> 
           </div>
-        </div>
+        </div></a>
 
         <!-- card two -->
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/forZane/Bowl_JJ.jpg" data-hover="img/forZane/Bowl_JJ2.jpg" data-unhover="img/forZane/Bowl_JJ.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
+              <img src="img/forZane/Bowl_JJ2.jpg" data-hover="img/forZane/Bowl_JJ.jpg" data-unhover="img/forZane/Bowl_JJ2.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
@@ -79,6 +80,7 @@
      <div class="container">
 
       <!-- row two -->
+      <!-- card four -->
       <div class="row">
         <div class="col s4">
           <div class="card">
@@ -91,6 +93,7 @@
             </div> 
           </div>
         </div>
+        <!-- card five -->
         <div class="col s4">
           <div class="card">
             <div class="card-image">
@@ -102,6 +105,7 @@
             </div> 
           </div>
         </div>
+        <!-- card six -->
         <div class="col s4">
           <div class="card">
             <div class="card-image">
