updated folders for better organization

--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
         <a href="/product pages/andrew_bowl.html"><div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/forZane/Bowl_Andrew1.jpg" data-hover="img/forZane/Bowl_Andrew2.jpg" data-unhover="img/forZane/Bowl_Andrew1.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
+              <img src="img/product/Bowl_Andrew1.jpg" data-hover="img/product/Bowl_Andrew2.jpg" data-unhover="img/product/Bowl_Andrew1.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
             </div>
             <div class="card-content">
               <h4 class="md-font">bowl one.</h4>
@@ -56,7 +56,7 @@
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/forZane/Bowl_JJ2.jpg" data-hover="img/forZane/Bowl_JJ.jpg" data-unhover="img/forZane/Bowl_JJ2.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
+              <img src="img/product/Bowl_JJ2.jpg" data-hover="img/product/Bowl_JJ.jpg" data-unhover="img/product/Bowl_JJ2.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
@@ -67,7 +67,7 @@
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/forZane/Bowl_Milo.jpg">
+              <img src="img/product/Bowl_Milo.jpg">
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
@@ -85,7 +85,7 @@
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/forZane/Juicer_Samantha1.jpg">
+              <img src="img/product/Juicer_Samantha1.jpg">
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
@@ -97,7 +97,7 @@
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/forZane/Juicer_Zoraida.jpg">
+              <img src="img/product/Juicer_Zoraida.jpg">
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
@@ -109,7 +109,7 @@
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/forZane/Juicer_Susie1.jpg">
+              <img src="img/product/Juicer_Susie1.jpg">
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
