--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,6 @@
 
      <!-- main shop grid -->
      <div class="container">
-
       <!-- row one -->
       <div class="row">
         <!-- card one -->
@@ -47,52 +46,54 @@
             </div>
             <div class="card-content">
               <h4 class="md-font">bowl one.</h4>
-              <p class="md-font">$50.</p>
+              <p class="md-font">$50</p>
             </div> 
           </div>
         </div></a>
 
         <!-- card two -->
-        <div class="col s4">
+        <a href="/product pages/jj_bowl.html"><div class="col s4">
           <div class="card">
             <div class="card-image">
               <img src="img/product/Bowl_JJ2.jpg" data-hover="img/product/Bowl_JJ.jpg" data-unhover="img/product/Bowl_JJ2.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
             </div>
             <div class="card-content">
-              <h4 class="md-font">ceramic one.</h4>
-              <p class="md-font">$50.</p>
+              <h4 class="md-font">bowl two.</h4>
+              <p class="md-font">$50</p>
             </div> 
           </div>
-        </div>
-        <div class="col s4">
+        </div></a>
+
+        <!-- card three -->
+        <a href="/product pages/milo_bowl.html"><div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/product/Bowl_Milo.jpg">
+              <img src="img/product/Bowl_Milo2.jpg" data-hover="img/product/Bowl_Milo.jpg" data-unhover="img/product/Bowl_Milo2.jpg" onmouseover="hover(this);" onmouseout="unhover(this);">
             </div>
             <div class="card-content">
-              <h4 class="md-font">ceramic one.</h4>
-              <p class="md-font">$50.</p>
+              <h4 class="md-font">bowl three.</h4>
+              <p class="md-font">$50</p>
             </div> 
           </div>
         </div>
       </div> 
-    </div>
-     <div class="container">
+    </div></a>
 
+     <div class="container">
       <!-- row two -->
       <!-- card four -->
-      <div class="row">
+      <a href="/product pages/juan_bowl.html"><div class="row">
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="img/product/Juicer_Samantha1.jpg">
+              <img src="img/product/Bowl_Juan1.jpg" data-hover="img/product/Bowl_Juan2.jpg" data-unhover="img/product/Bowl_Juan1.jpg" onmouseover="hover(this);" onmouseout="unhover(this);" >
             </div>
             <div class="card-content">
-              <h4 class="md-font">ceramic one.</h4>
-              <p class="md-font">$50.</p>
+              <h4 class="md-font">bowl four.</h4>
+              <p class="md-font">$50</p>
             </div> 
           </div>
-        </div>
+        </div></a>
         <!-- card five -->
         <div class="col s4">
           <div class="card">
@@ -101,7 +102,7 @@
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
-              <p class="md-font">$50.</p>
+              <p class="md-font">$50</p>
             </div> 
           </div>
         </div>
@@ -113,7 +114,7 @@
             </div>
             <div class="card-content">
               <h4 class="md-font">ceramic one.</h4>
-              <p class="md-font">$50.</p>
+              <p class="md-font">$50</p>
             </div> 
           </div>
         </div>
