--- a/product pages/juan_bowl.html
+++ b/product pages/juan_bowl.html
@@ -32,7 +32,7 @@
      </nav>
      <!-- item title -->
      <div class="item-header">
-        <h3 class="center lg-font">bowl one.</h3>
+        <h3 class="center lg-font">bowl four.</h3>
      </div>
      <!-- grid display -->
      <div class="container">
@@ -40,14 +40,14 @@
             <div class="col s6">
               <div class="card">
                 <div class="card-image">
-                  <img src="/img/product/Bowl_Andrew1.jpg">
+                  <img src="/img/product/Bowl_Juan1.jpg">
                 </div>
               </div>
             </div>
             <div class="col s6">
               <div class="card">
                 <div class="card-image">
-                  <img src="/img/product/Bowl_Andrew2.jpg">
+                  <img src="/img/product/Bowl_Juan2.jpg">
                 </div>
               </div>
             </div>
