added more product pages

--- a/product pages/andrew_bowl.html
+++ b/product pages/andrew_bowl.html
@@ -25,7 +25,7 @@
       <div class="nav-wrapper">
         <a href="/index.html" class="brand-logo center black-text">kimkim.</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="shop.html" class="black-text">shop.</a></li>
+          <li><a href="/shop.html" class="black-text">shop.</a></li>
           <li><a href="collapsible.html" class="black-text">about.</a></li>
         </ul>
       </div>
