--- a/product pages/juicer_juicer.html
+++ b/product pages/juicer_juicer.html
@@ -32,7 +32,7 @@
      </nav>
      <!-- item title -->
      <div class="item-header">
-        <h3 class="center lg-font">bowl four.</h3>
+        <h3 class="center lg-font">juicer four.</h3>
      </div>
      <!-- grid display -->
      <div class="container">
@@ -40,17 +40,18 @@
             <div class="col s6">
               <div class="card">
                 <div class="card-image">
-                  <img src="/img/product/Bowl_Juan1.jpg">
+                  <img src="/img/product/Juicer1.jpg">
                 </div>
               </div>
             </div>
             <div class="col s6">
               <div class="card">
                 <div class="card-image">
-                  <img src="/img/product/Bowl_Juan2.jpg">
+                  <img src="/img/product/Juicer1-2.jpg">
                 </div>
               </div>
             </div>
+        </div>
      </div>
      <!-- item info and buy button? -->
      <div class="container center">
@@ -63,4 +64,4 @@
         
      </div>
     </body>
-  </html>  
+  </html>
