--- a/product pages/susie_juicer.html
+++ b/product pages/susie_juicer.html
@@ -32,7 +32,7 @@
      </nav>
      <!-- item title -->
      <div class="item-header">
-        <h3 class="center lg-font">bowl four.</h3>
+        <h3 class="center lg-font">juicer two.</h3>
      </div>
      <!-- grid display -->
      <div class="container">
@@ -40,14 +40,14 @@
             <div class="col s6">
               <div class="card">
                 <div class="card-image">
-                  <img src="/img/product/Bowl_Juan1.jpg">
+                  <img src="/img/product/Juicer_Susie1.jpg">
                 </div>
               </div>
             </div>
             <div class="col s6">
               <div class="card">
                 <div class="card-image">
-                  <img src="/img/product/Bowl_Juan2.jpg">
+                  <img src="/img/product/Juicer_Susie2.jpg">
                 </div>
               </div>
             </div>
@@ -63,4 +63,4 @@
         
      </div>
     </body>
-  </html>  
+  </html>
